# icetray-examples

./: .mailinglist  CMakeLists.txt  LinkDef.h  README_FIRST  RELEASE_NOTES
private/examples/: MutineerTrack.cxx
private/modules/: AlmostSmartFeatureExtractor.cxx  DeltaAngle.cxx  DumbFeatureExtractor.cxx  FibonacciCheck.cxx  GetI3Int.cxx  HelloConfiguration.cxx  HelloWorld.cxx  LessDumbFeatureExtractor.cxx  NamedFibonacciCheck.cxx  PutParticle.cxx  SimpleReconstruction.cxx  SimpleReconstructionParams.cxx  Smear.cxx  UseRandom.cxx  UseRandomV2.cxx
private/pybindings/: CMakeLists.txt  module.cxx
private/services/: FibonacciServiceFactories.cxx
public/examples/: Gaussian.h  MutineerTrack.h
public/examples/modules/: AlmostSmartFeatureExtractor.h  DeltaAngle.h  DumbFeatureExtractor.h  FibonacciCheck.h  HelloConfiguration.h  HelloWorld.h  LessDumbFeatureExtractor.h  NamedFibonacciCheck.h  PutParticle.h  RootTree.h  SimpleReconstruction.h  SimpleReconstructionParams.h  Smear.h
public/examples/services/: FibonacciService.h  NamedFibonacciServiceFactory.h  OnePerModuleFibonacciServiceFactory.h  OnlyOneModuleFibonacciServiceFactory.h  SequenceService.h  SingletonFibonacciServiceFactory.h
python/: EffectiveArea.py  HistogramFactory.py  PlotWithWeightedHistogram.py  __init__.py  mutineer.py  paraboloidpull.py  show.py
python/histos/: Browser.py  PyROOTUtils.py  __init__.py
python/modules/: DeltaAngle.py  GThenEmptyPhysics.py  LessDumbFeatureExtractor.py  LineFit.py  ThroughgoingTrack.py  UseRandom.py  __init__.py
python/pilfer/: __init__.py  angdiff.py  mcalc.py  stats.py  util.py
python/scripts/: A1_pass_i3int_to_module.py  B0_pass_function_to_i3tray.py  B2_pass_closure_to_i3tray.py  B3_filter_with_function.py  D_module_in_python.py  E_module_fancy_parameter_in_python.py  F_use_randomservice.py  G_pass_randomservice_as_param_to_cpp_module.py  H_pass_randomservice_as_param_to_pymodule.py  I_cpp_uses_python_impl_of_randomservice.py  J_autoupdating_histogram.py  K_delang_plot.py  L_PyLessDumbFeatureExtractor.py  M_LineFit.py  dom_occupancy.py  make_cherenkov_cone.py
python/services/: ConstantService.py  __init__.py
python/test/: SomeTest.py
python/x11_scripts/: K_delang_plot.py  L_PyLessDumbFeatureExtractor.py  dom_occupancy.py
resources/docs/: index.rst  modules.rst  scripts.rst  services.rst
resources/examples/: H_pass_randomservice_as_param_to_pymodule.py  PlotWithWeightedHistogram.py  make_testdata.py  paraboloidpull.py
resources/scripts/: EffectiveArea.py  pass1.py  pass3.py  pass4.py  pass5.py  pass5_eventviewer.py  pass7_HelloConfiguration.py  pass7_PutParticle.py  pass8_Smear.py  pass9_DeltaAngle.py  passA_smearing_and_TH1s.py  passC_singleton_fibonacci.py  passD_singleton_fibonacci_is_a_bad_idea.py  passE_one_fibonacci_per_module.py  passF_fibonacci_is_hiding_at_different_name.py  passG_module_looks_for_fibonacci_in_particular_place.py  passH_one_fibonacci_one_module.py  passI_verify_not_at_default_location1.py  show.py
resources/test/: A0_new_config_syntax.py  B3_filter_with_function.py  F_use_randomservice.py  G_pass_randomservice_as_param_to_cpp_module.py  J_autoupdating_histogram.py  M_LineFit.py  pass1.py  pass2.py  pass3.py  pass4.py  pass4a_delete_unregistered.py  pass5.py  pass6_HelloWorld.py  pass7_HelloConfiguration.py  pass7_PutParticle.py  pass8_Smear.py  pass9_DeltaAngle.py  passA_smearing_and_TH1s.py  passC_singleton_fibonacci.py  passD_singleton_fibonacci_is_a_bad_idea.py  passE_one_fibonacci_per_module.py  passF_fibonacci_is_hiding_at_different_name.py  passG_module_looks_for_fibonacci_in_particular_place.py  passH_one_fibonacci_one_module.py  passI_verify_not_at_default_location1.py  use_context_suite.py  v2_use_of_randomservice.py
